--- a/event_2025_the_song_of_ducks_and_dragons/Cargo.toml
+++ b/event_2025_the_song_of_ducks_and_dragons/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+reqwest = { version = "0.12.24", features = ["blocking", "json"] }
+serde_json = "1.0.145"
+aes = "0.8.4"
+hex = "0.4.3"
+cbc = "0.1.2"
+dotenv = "0.15.0"
